<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/welcome_back"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"/>

        <RelativeLayout
            android:id="@+id/rl_txtsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_welcome">

            <TextView
                android:id="@+id/txt_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:letterSpacing="0.1"
                android:text="@string/newtotransferwise"/>

            <TextView
                android:id="@+id/txt_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hyperlink"
                android:layout_toEndOf="@id/txt_new"
                android:textStyle="bold"
                android:letterSpacing="0.1"
                android:text="@string/Signup"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_txtsignup"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/Email_hint"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:background="@drawable/edittext_bg"
                android:layout_margin="25dp"
                android:padding="7dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"
                android:inputType="textPassword"
                android:hint="@string/pass_hint"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:background="@drawable/edittext_bg"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:padding="7dp"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/Login"
                android:backgroundTint="@color/Button"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>