<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="15dp"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <RelativeLayout
                android:id="@+id/rl_history1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_recipientname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipientname"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txt_amounttransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/amounttransfer"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_history2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_history1">

                <TextView
                    android:id="@+id/txt_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statustransfer"
                    android:textColor="@color/gray"/>

                <TextView
                    android:id="@+id/txt_convertsamount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/convertsamount"
                    android:textColor="@color/gray"/>

            </RelativeLayout>


        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>